@@ -1,5 +1,7 @@
 v0.11.0
 * Import from URL.
+* Whole words substitutions now support the extended Latin alphabet, IPA extensions, and the Greek,
+  Coptic and Cyrillic alphabets.
 * "Clear" buttons in all dialogs disabled if their respective lists are empty.
 * Removed compatibility with the substitution list in the old 0.7 format.
 * Compatibility with Firefox 3.1b3.
